data/derived/sp14/progs/unify/prog3905.ml.out
Characters 185-194:
  | Cosine (a) -> cos( pi )
                  ^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
